add common function